--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <font size="6" face="verdana" color="white">
-<body background="images\backgroundpage.jpg" />
+<body background="images/backgroundpage.jpg" />
 <h1 class="title">Welcome dear visitor!<br /> let me introduce myself...</h1>
 
 
