--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <h2 class="title"> <u>The name is Ronen Gur Arye</u></h2>
-<img src="M:\QA\HTML\Personal site\Ronen  Gur Arye Site\images\profile.jpg" />
+<img src="/images\profile.jpg" />
 
 <hr style="width:50%;">
 <h3 class="title">About Me</h3>
